Make translations dynamic, add translations, remove widgets main file, and more

--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -1,23 +1,27 @@
 {
-  "Welcome back": "Witaj ponownie",
-  "Email address": "Adres email",
-  "Password": "Hasło",
-  "Log in": "Zaloguj się",
-  "Remember me": "Zapamiętaj mnie",
-  "Create new account": "Utwórz nowe konto",
-  "Forgotten password?": "Nie pamiętasz hasła?",
-  "Profile": "Profil",
-  "New password": "Nowe hasło",
-  "Confirm password": "Potwierdź hasło",
-  "Change password": "Zmień hasło",
-  "Passwords must match": "Hasła muszą być identyczne",
-  "Passwords match": "Hasła identyczne",
-  "Complete account recovery": "Dokończ odzyskiwanie konta",
-  "Please enter your new password below to complete the recovery of your account.": "Wprowadź nowe hasło poniżej, aby zakończyć odzyskiwanie konta.",
-  "Recover account": "Odzyskaj konto",
-  "If there is an account associated with your email address, we will send you an email containing a link to reset your password.": "Jeśli istnieje konto powiązane z Twoim adresem e-mail, wyślemy Ci wiadomość e-mail z linkiem do zresetowania hasła.",
-  "Send form": "Wyślij formularz",
+  "Already have an account? Click here to log in.": "Masz już konto? Kliknij tutaj, aby się zalogować.",
   "Back to login": "Powrót do logowania",
+  "Change password": "Zmień hasło",
+  "Complete account recovery": "Dokończ odzyskiwanie konta",
+  "Confirm new password": "Potwierdź nowe hasło",
+  "Confirm password": "Potwierdź hasło",
+  "Create new account": "Utwórz nowe konto",
+  "Email address": "Adres email",
+  "Forgotten password?": "Nie pamiętasz hasła?",
+  "If there is an account associated with your email address, we will send you an email containing a link to reset your password.": "Jeśli istnieje konto powiązane z Twoim adresem e-mail, wyślemy Ci wiadomość e-mail z linkiem do zresetowania hasła.",
+  "Log in": "Zaloguj się",
+  "Log out": "Wyloguj się",
+  "New password": "Nowe hasło",
+  "Old password": "Stare hasło",
+  "Password": "Hasło",
+  "Passwords match": "Hasła identyczne",
+  "Passwords must match": "Hasła muszą być identyczne",
+  "Please enter your new password below to complete the recovery of your account.": "Wprowadź nowe hasło poniżej, aby zakończyć odzyskiwanie konta.",
+  "Profile": "Profil",
+  "Recover account": "Odzyskaj konto",
   "Register": "Zarejestruj się",
-  "Already have an account? Click here to log in.": "Masz już konto? Kliknij tutaj, aby się zalogować."
+  "Remember me": "Zapamiętaj mnie",
+  "Send form": "Wyślij formularz",
+  "User account": "Konto użytkownika",
+  "Welcome back": "Witaj ponownie"
 }
