Finish translations, modify dashboard router, and more

--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -2,9 +2,9 @@
   "Already have an account? Click here to log in.": "Masz już konto? Kliknij tutaj, aby się zalogować.",
   "Back to login": "Powrót do logowania",
   "Change password": "Zmień hasło",
+  "Check your inbox 💌": "Sprawdź skrzynkę pocztową 💌",
   "Complete account recovery": "Dokończ odzyskiwanie konta",
   "Confirm new password": "Potwierdź nowe hasło",
-  "Confirm password": "Potwierdź hasło",
   "Create new account": "Utwórz nowe konto",
   "Email address": "Adres email",
   "Forgotten password?": "Nie pamiętasz hasła?",
@@ -14,14 +14,16 @@
   "New password": "Nowe hasło",
   "Old password": "Stare hasło",
   "Password": "Hasło",
+  "Password changed!": "Hasło zmienione!",
   "Passwords match": "Hasła identyczne",
   "Passwords must match": "Hasła muszą być identyczne",
-  "Please enter your new password below to complete the recovery of your account.": "Wprowadź nowe hasło poniżej, aby zakończyć odzyskiwanie konta.",
+  "Please enter your new password below to complete the recovery of your account.": "Wprowadź nowe hasło, aby zakończyć odzyskiwanie konta.",
   "Profile": "Profil",
   "Recover account": "Odzyskaj konto",
   "Register": "Zarejestruj się",
   "Remember me": "Zapamiętaj mnie",
   "Send form": "Wyślij formularz",
   "User account": "Konto użytkownika",
-  "Welcome back": "Witaj ponownie"
+  "Welcome back": "Witaj ponownie",
+  "Your password has been changed successfully. We've sent a confirmation email to your registered email address.": "Twoje hasło zostało pomyślnie zmienione. Wysłaliśmy wiadomość z potwierdzeniem na Twój adres mailowy."
 }
