Fix dashboard redirect for logged users, create default dashboard index, and more

--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -2,7 +2,7 @@
   "Already have an account? Click here to log in.": "Masz już konto? Kliknij tutaj, aby się zalogować.",
   "Back to login": "Powrót do logowania",
   "Change password": "Zmień hasło",
-  "Check your inbox 💌": "Sprawdź skrzynkę pocztową 💌",
+  "Check your inbox": "Sprawdź skrzynkę pocztową",
   "Complete account recovery": "Dokończ odzyskiwanie konta",
   "Confirm new password": "Potwierdź nowe hasło",
   "Create new account": "Utwórz nowe konto",
